listings/ch17-oop/no-listing-01-trait-object-of-clone/output.txt
$ cargo build
   Compiling gui v0.1.0 (file:///projects/gui)
error[E0038]: the trait `Clone` cannot be made into an object
 --> src/lib.rs:2:21
  |
2 |     pub components: Vec<Box<dyn Clone>>,
  |                     ^^^^^^^^^^^^^^^^^^^ the trait `Clone` cannot be made into an object
  |
  = note: the trait cannot be made into an object because it requires `Self: Sized`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
error: could not compile `gui`

To learn more, run the command again with --verbose.
